--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
  <section class="principal">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <h1> no Disney+ voce pode assistir filmes e series que voce gosta.</h1>
         <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
     </section>
 </body>
