--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
  <section class="principal">
         <h1> no Disney+ voce pode assistir filmes e series que voce gosta.</h1>
-        <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+        <img src="joice.jpeg" alt="O combo+ é a junção do alura+ e o alura língua">
     </section>
 </body>
 
