--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <section class="principal">
         <h1> no Disney+ voce pode assistir filmes e series que voce gosta.</h1>
         <img src="joice.jpeg " alt="O combo+ é a junção do alura+ e o alura língua">
+        <a href="www.alura"
     </section>
 </body>
 
