--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <section class="principal">
         <h1> no Disney+ voce pode assistir filmes e series que voce gosta.</h1>
         <img src="joice.jpeg " alt="O combo+ é a junção do alura+ e o alura língua">
-        <a href="www.alura"
+        <a href="www.alura.com.br">Assine por 12x de R$ 120,00*</a>
     </section>
 </body>
 
