--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 <body>
  <section class="principal">
+    <div>
         <h1> no Disney+ voce pode assistir filmes e series que voce gosta.</h1>
         <img src="joice.jpeg " alt="O combo+ é a junção do alura+ e o alura língua">
         <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+    </div>    
     </section>
 </body>
 
